added 'Enable display at startup' feature for Exoplanets, Pulsars and Quasars plugins; added automatic upgrade for obsolete keys from config.ini

--- a/plugins/Pulsars/src/gui/pulsarsDialog.ui
+++ b/plugins/Pulsars/src/gui/pulsarsDialog.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>539</width>
-    <height>467</height>
+    <width>535</width>
+    <height>463</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -242,6 +242,13 @@
             </property>
             <property name="text">
              <string>Enable display of distribution for pulsars</string>
+            </property>
+           </widget>
+          </item>
+          <item>
+           <widget class="QCheckBox" name="displayAtStartupCheckBox">
+            <property name="text">
+             <string>Enable display at startup</string>
             </property>
            </widget>
           </item>
