--- a/plugins/Exoplanets/src/gui/exoplanetsDialog.ui
+++ b/plugins/Exoplanets/src/gui/exoplanetsDialog.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>528</width>
-    <height>451</height>
+    <height>449</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -249,6 +249,13 @@
             </property>
             <property name="text">
              <string>Enable timeline discovery of exoplanets</string>
+            </property>
+           </widget>
+          </item>
+          <item>
+           <widget class="QCheckBox" name="displayAtStartupCheckBox">
+            <property name="text">
+             <string>Enable display at startup</string>
             </property>
            </widget>
           </item>
